--- a/notebooks/01-GettingStarted/GettingStarted.ipynb
+++ b/notebooks/01-GettingStarted/GettingStarted.ipynb
@@ -39,9 +39,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "User 85 loved these movies:\n",
+            "Jumanji (1995) 5.0\n",
+            "GoldenEye (1995) 5.0\n",
+            "Braveheart (1995) 5.0\n",
+            "Jerky Boys, The (1995) 5.0\n",
+            "LÃ©on: The Professional (a.k.a. The Professional) (LÃ©on) (1994) 5.0\n",
+            "Pulp Fiction (1994) 5.0\n",
+            "Stargate (1994) 5.0\n",
+            "Shawshank Redemption, The (1994) 5.0\n",
+            "Star Trek: Generations (1994) 5.0\n",
+            "Clear and Present Danger (1994) 5.0\n",
+            "\n",
+            "...and hated these movies:\n",
+            "Postman, The (Postino, Il) (1994) 1.0\n",
+            "Casper (1995) 1.0\n",
+            "Mighty Morphin Power Rangers: The Movie (1995) 1.0\n",
+            "Prophecy, The (1995) 1.0\n",
+            "Heavenly Creatures (1994) 1.0\n",
+            "Little Women (1994) 1.0\n",
+            "Nell (1994) 1.0\n",
+            "Poison Ivy II (1996) 1.0\n",
+            "Tank Girl (1995) 1.0\n",
+            "While You Were Sleeping (1995) 1.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Pick an arbitrary test subject\n",
         "test_uid = 85\n",
@@ -70,9 +100,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7f87ffff7920>"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Building recommendation model\n",
         "trainset = ratings_data.build_full_trainset()\n",
@@ -83,9 +124,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "We recommend:\n",
+            "\n",
+            "Godfather: Part II, The (1974) 4.5\n",
+            "Lord of the Rings: The Return of the King, The (2003) 4.4\n",
+            "Fight Club (1999) 4.3\n",
+            "Conversation, The (1974) 4.3\n",
+            "Psycho (1960) 4.3\n",
+            "All the President's Men (1976) 4.3\n",
+            "Lawrence of Arabia (1962) 4.3\n",
+            "Usual Suspects, The (1995) 4.3\n",
+            "Lord of the Rings: The Fellowship of the Ring, The (2001) 4.3\n",
+            "Producers, The (1968) 4.3\n"
+          ]
+        }
+      ],
       "source": [
         "# Generate recommendations\n",
         "testset = create_anti_testset(test_uid, trainset)\n",
