--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -134,7 +134,7 @@
               "2       1     1061     3.0  1260759182"
             ]
           },
-          "execution_count": 110,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -155,16 +155,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x76f17f86afc0>"
+              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x7082666411f0>"
             ]
           },
-          "execution_count": 111,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -189,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -236,21 +236,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Hit Rate: 0.02981\n",
+            "Hit Rate: 0.03130\n",
             "rHR (Hit Rate by rating value):\n",
+            "\t1.5: 0.12500\n",
             "\t3.5: 0.01724\n",
             "\t4.0: 0.04255\n",
             "\t4.5: 0.02083\n",
             "\t5.0: 0.06803\n",
             "cHR (Cumulative Hit Rate, rating >= 4): 0.02832\n",
-            "ARHR (Average Reciprocal Hit Rank): 0.01116\n"
+            "ARHR (Average Reciprocal Hit Rank): 0.01137\n"
           ]
         }
       ],
@@ -292,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -304,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -326,14 +327,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Diversity: 0.96652\n"
+            "Diversity: 0.96699\n"
           ]
         }
       ],
@@ -345,14 +346,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Novelty (average popularity rank): 491.57678\n"
+            "Novelty (average popularity rank): 499.79553\n"
           ]
         }
       ],
