--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +44,7 @@
     "from recsys.Evaluator import Evaluator\n",
     "\n",
     "import random\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import numpy as np"
    ]
   },
   {
@@ -48,12 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(10)\n",
-    "random.seed(10)"
+    "np.random.seed(0)\n",
+    "random.seed(0)"
    ]
   },
   {
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,15 +125,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -182,52 +181,94 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>SVD</th>\n",
-       "      <td>0.903370</td>\n",
+       "      <td>0.90337</td>\n",
        "      <td>0.697788</td>\n",
-       "      <td>0.029806</td>\n",
+       "      <td>0.031297</td>\n",
        "      <td>0.028316</td>\n",
-       "      <td>0.011156</td>\n",
-       "      <td>0.955291</td>\n",
-       "      <td>0.044513</td>\n",
-       "      <td>491.576778</td>\n",
+       "      <td>0.011369</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.046182</td>\n",
+       "      <td>499.795529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random</th>\n",
-       "      <td>1.444488</td>\n",
-       "      <td>1.152786</td>\n",
-       "      <td>0.014903</td>\n",
-       "      <td>0.008942</td>\n",
-       "      <td>0.002102</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.067308</td>\n",
-       "      <td>545.159016</td>\n",
+       "      <td>1.43594</td>\n",
+       "      <td>1.148223</td>\n",
+       "      <td>0.017884</td>\n",
+       "      <td>0.011923</td>\n",
+       "      <td>0.002692</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.069377</td>\n",
+       "      <td>541.005961</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               RMSE       MAE        HR       cHR      ARHR  Coverage  \\\n",
-       "Algorithm                                                               \n",
-       "SVD        0.903370  0.697788  0.029806  0.028316  0.011156  0.955291   \n",
-       "Random     1.444488  1.152786  0.014903  0.008942  0.002102  1.000000   \n",
+       "              RMSE       MAE        HR       cHR      ARHR  Coverage  \\\n",
+       "Algorithm                                                              \n",
+       "SVD        0.90337  0.697788  0.031297  0.028316  0.011369       1.0   \n",
+       "Random     1.43594  1.148223  0.017884  0.011923  0.002692       1.0   \n",
        "\n",
        "           Diversity     Novelty  \n",
        "Algorithm                         \n",
-       "SVD         0.044513  491.576778  \n",
-       "Random      0.067308  545.159016  "
+       "SVD         0.046182  499.795529  \n",
+       "Random      0.069377  541.005961  "
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "results_df = pd.DataFrame(\n",
-    "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
-    ")\n",
-    "results_df"
+    "results = evaluator.evaluate(top_n_metrics=True)\n",
+    "\n",
+    "results.to_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVD\n",
+      "  All About Eve (1950)\n",
+      "  Star Wars: Episode V - The Empire Strikes Back (1980)\n",
+      "  Fight Club (1999)\n",
+      "  Cool Hand Luke (1967)\n",
+      "  Goodfellas (1990)\n",
+      "  Hachiko: A Dog's Story (a.k.a. Hachi: A Dog's Tale) (2009)\n",
+      "  General, The (1926)\n",
+      "  African Queen, The (1951)\n",
+      "  Graduate, The (1967)\n",
+      "  When We Were Kings (1996)\n",
+      "Random\n",
+      "  Ed Wood (1994)\n",
+      "  Sirens (1994)\n",
+      "  Happiness (1998)\n",
+      "  Spider-Man 2 (2004)\n",
+      "  V for Vendetta (2006)\n",
+      "  Dark Knight, The (2008)\n",
+      "  White Stripes Under Great White Northern Lights, The (2009)\n",
+      "  Birdcage, The (1996)\n",
+      "  Pinocchio (1940)\n",
+      "  Maltese Falcon, The (1941)\n"
+     ]
+    }
+   ],
+   "source": [
+    "samples = evaluator.sample_top_n_recs(uid=85)\n",
+    "\n",
+    "for algorithm, recs in samples.items():\n",
+    "    print(f\"{algorithm}\")\n",
+    "    movie_names = lens.get_movie_names(recs)\n",
+    "    for movie_name in movie_names:\n",
+    "        print(f\"  {movie_name}\")"
    ]
   }
  ],
