--- a/notebooks/05-ContentBased/ContentRecs.ipynb
+++ b/notebooks/05-ContentBased/ContentRecs.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -107,95 +107,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>RMSE</th>\n",
-              "      <th>MAE</th>\n",
-              "      <th>HR</th>\n",
-              "      <th>cHR</th>\n",
-              "      <th>ARHR</th>\n",
-              "      <th>Coverage</th>\n",
-              "      <th>Diversity</th>\n",
-              "      <th>Novelty</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Algorithm</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>ContentKNN</th>\n",
-              "      <td>0.937506</td>\n",
-              "      <td>0.726342</td>\n",
-              "      <td>0.002981</td>\n",
-              "      <td>0.002981</td>\n",
-              "      <td>0.001703</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.573919</td>\n",
-              "      <td>4559.691505</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Random</th>\n",
-              "      <td>1.438459</td>\n",
-              "      <td>1.147809</td>\n",
-              "      <td>0.008942</td>\n",
-              "      <td>0.008942</td>\n",
-              "      <td>0.001505</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.071946</td>\n",
-              "      <td>557.836513</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                RMSE       MAE        HR       cHR      ARHR  Coverage  \\\n",
-              "Algorithm                                                                \n",
-              "ContentKNN  0.937506  0.726342  0.002981  0.002981  0.001703       1.0   \n",
-              "Random      1.438459  1.147809  0.008942  0.008942  0.001505       1.0   \n",
-              "\n",
-              "            Diversity      Novelty  \n",
-              "Algorithm                           \n",
-              "ContentKNN   0.573919  4559.691505  \n",
-              "Random       0.071946   557.836513  "
-            ]
-          },
-          "execution_count": 23,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "results_df = pd.DataFrame(\n",
         "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
@@ -209,7 +123,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samples = evaluator.sample_top_n_recs(lens)\n",
+        "samples = evaluator.sample_top_n_recs(uid=85)\n",
         "samples"
       ]
     }
