--- a/notebooks/06-CollaborativeFiltering/KNNBakeOff.ipynb
+++ b/notebooks/06-CollaborativeFiltering/KNNBakeOff.ipynb
@@ -33,8 +33,7 @@
         "from recsys.Evaluator import Evaluator\n",
         "\n",
         "import random\n",
-        "import numpy as np\n",
-        "import pandas as pd"
+        "import numpy as np"
       ]
     },
     {
@@ -46,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -63,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -90,10 +89,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "user_knn = KNNBasic(sim_options={'name': 'cosine', 'user_based': True})\n",
+        "user_knn = KNNBasic(sim_options={'name': 'cosine', 'user_based': True}, verbose=False)\n",
         "evaluator.add_algorithm(user_knn, \"User KNN\")\n",
         "\n",
-        "item_knn = KNNBasic(sim_options={'name': 'cosine', 'user_based': False})\n",
+        "item_knn = KNNBasic(sim_options={'name': 'cosine', 'user_based': False}, verbose=False)\n",
         "evaluator.add_algorithm(item_knn, \"Item KNN\")\n",
         "\n",
         "random_model = NormalPredictor()\n",
@@ -115,26 +114,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Evaluation results"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "results_df = pd.DataFrame(\n",
-        "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
-        ")\n",
-        "results_df"
+        "results = evaluator.evaluate(top_n_metrics=True)\n",
+        "\n",
+        "results.to_df()"
       ]
     },
     {
@@ -152,8 +134,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samples = evaluator.sample_top_n_recs(lens)\n",
-        "samples"
+        "samples = evaluator.sample_top_n_recs(uid=85)\n",
+        "\n",
+        "for algorithm, recs in samples.items():\n",
+        "    print(f\"{algorithm}\")\n",
+        "    movie_names = lens.get_movie_names(recs)\n",
+        "    for movie_name in movie_names:\n",
+        "        print(f\"  {movie_name}\")"
       ]
     }
   ],
