--- a/notebooks/07-MatrixFactorization/SVDTuning.ipynb
+++ b/notebooks/07-MatrixFactorization/SVDTuning.ipynb
@@ -180,7 +180,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samples = evaluator.sample_top_n_recs(lens)\n",
+        "samples = evaluator.sample_top_n_recs(uid=85)\n",
         "samples"
       ]
     }
