--- a/notebooks/11-Challenges/RBMBakeOff.ipynb
+++ b/notebooks/11-Challenges/RBMBakeOff.ipynb
@@ -151,7 +151,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "samples = evaluator.sample_top_n_recs(lens)\n",
+        "samples = evaluator.sample_top_n_recs(uid=85)\n",
         "samples"
       ]
     }
